# MiniBtop

./: CMakeLists.txt
include/: CPUReader.hpp  MemoryReader.hpp  MiniBtopApp.hpp  NetworkReader.hpp  ProcessReader.hpp  SystemInfoReader.hpp  TerminalUI.hpp  ThermalReader.hpp
src/: CPUReader.cpp  MemoryReader.cpp  MiniBtopApp.cpp  NetworkReader.cpp  ProcessReader.cpp  SystemInfoReader.cpp  TerminalUI.cpp  ThermalReader.cpp  main.cpp
